forgot to descide 9x / nt